--- a/blog/templates/start_page.html
+++ b/blog/templates/start_page.html
@@ -12,6 +12,7 @@
     <center>
         <h1>这里是个人网站的起始页</h1>
         <h2><a href="{% url 'index_unlog' %}">转到首页</a></h2>
+        <h2><a href="{% url 'admin/' %}">转到管理员</a></h2>
     </center>
 </body>
 
