--- a/blog/templates/articles/article_content.html
+++ b/blog/templates/articles/article_content.html
@@ -8,6 +8,8 @@
     <meta charset="UTF-8">
     <link href="{% static 'mdeditor/css/editormd.min.css' %}" rel="stylesheet">
     <link href="{% static 'mdeditor/css/editormd.preview.css' %}" rel="stylesheet">
+    <!-- OwO评论区表情 -->
+    <link rel="stylesheet" href="{%static 'plugins/OwO/OwO.min.css'%}">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>文章详情页</title>
 </head>
@@ -15,6 +17,7 @@
 <body>
     <center>
         <h1>{{ article.title }}</h1>
+        <h4>浏览量：{{ article.visit_num }}</h4>
     </center>
     <!-- <p>
         {{article.content}}
@@ -64,11 +67,97 @@
     </a>
     {% endif %}
 
+    <br />
+    <!-- 提交评论 -->
+    <!-- <form action="{% url 'blog:submit_comment' %}" method="post">
+        {% csrf_token %}
+        {{ form.media }}
+        {{ form }}
+        <input type="text" id="article_id" value="{{article.article_id}}" style="display:none">
+        <input type="submit" value="Submit">
+    </form> -->
+
+    <form id="" method="post" enctype="multipart/form-data">
+        {% csrf_token %}
+        <input type="text" id="nickname" />
+        <input type="text" id="author_email" />
+        <input type="text" id="author_link" />
+        <div class="OwO-textarea">
+            <textarea class="OwO OwO-textarea" id='comment_content'></textarea>
+        </div>
+        <!-- OwO表情 -->
+        <div class="OwO"></div>
+        <input type="text" id="article_id" value="{{article.article_id}}" style="display:none">
+        <a type="text" id="postaddress" href="{% url 'blog:submit_comment' %}" style="display: none"></a>
+        <button onclick="submit_comment()">提交评论</button>
+    </form>
+
+    <!-- OwO表情 -->
+    <script>
+        var OwO_demo = new OwO({
+            logo: 'OωO表情',
+            container: document.getElementsByClassName('OwO')[0],
+            target: document.getElementsByClassName('OwO-textarea')[0],
+            api: "{%static 'plugins/OwO/OwO.json'%}",
+            position: 'down',
+            width: '100%',
+            maxHeight: '250px'
+        });
+    </script>
+    <script src="{%static 'plugins/OwO/OwO.min.js'%}"></script>
+
+    <!-- ajax交互，提交评论 -->
+    <script>
+        function submit_comment() {
+            var comment_content = document.getElementById("comment").value;
+            var article_id = document.getElementById("article_id").value;
+            var postaddress = $("#postaddress").attr('href');
+            $.ajax({
+                url: postaddress,     //请求url地址
+                type: "POST",
+                data: { "id": id, "comment": comment },       //发送post请求携带的数据信息
+                //dataType: "json",     //期望返回的数据格式，也可以不设置
+                success: function (data) {
+                    alert("评论成功");
+                    document.getElementById("comment").value = "";
+                    history.go(0);
+                },
+                error: function () {
+                    alert("服务器错误，评论错误");
+                }
+            })
+        }
+    </script>
+
+    <!-- 验证码刷新 -->
+    <script src="https://cdn.bootcss.com/jquery/1.12.3/jquery.min.js"></script>
+    <script>
+        //点击刷新验证码
+        $(function () {
+            $('.captcha').css({
+                'cursor': 'pointer'
+            });
+            // ajax刷新
+            $('.captcha').click(function () {
+                console.log('click');
+                $.get("{% url 'captcha-refresh' %}",
+                    function (result) {
+                        $('.captcha').attr('src', result['image_url']);
+                        $('#id_captcha_0').val(result['key'])
+                    });
+            });
+        })
+    </script>
+
     <!-- 评论区 -->
     {% if comments %}
     <ul>
         {% for comment in comments %}
+        {% if comment.status == 'npr' %}
+        <li>{{ comment.author }} 提交的评论还未过审</li>
+        {% else %}
         <li>{{ comment.author }} 说 {{ comment.content }}</li>
+        {% endif %}
         {% endfor %}
     </ul>
     {% else %}
