--- a/blog/templates/articles/article_content.html
+++ b/blog/templates/articles/article_content.html
@@ -25,6 +25,7 @@
 
     <div id="content"><textarea>{{article.content}}</textarea></div>
 
+    <!-- 解析Markdown -->
     <script src="{% static 'mdeditor/js/jquery.min.js' %}"></script>
     <script src="{% static 'mdeditor/js/editormd.min.js' %}"></script>
     <script src="{% static 'mdeditor/js/lib/marked.min.js' %}"></script>
