--- a/blog/templates/index_unlog.html
+++ b/blog/templates/index_unlog.html
@@ -1,43 +1,34 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'base.html' %}
 
-<head>
-    {% load static %}
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>首页</title>
-</head>
+{% block title %}个人博客系统测试{% endblock %}
 
-<body>
-    <center>
-        个人博客系统测试
-        <p>
-            <a href="{% url 'blog:login' %}">转到登录</a>
-        </p>
-        <p>
-            <a href="{% url 'blog:archive' %}">转到归档</a>
-        </p>
+{% block content %}
+<center>
+    个人博客系统测试
+    <p>
+        <a href="{% url 'blog:login' %}">转到登录</a>
+    </p>
+    <p>
+        <a href="{% url 'blog:archive' %}">转到归档</a>
+    </p>
 
-        <!-- 文章列表 -->
-        {% if article_list %}
-        <ul>
-            <!-- 单个文章标题 -->
-            {% for article in article_list %}
-            {% if article.content_type == 'lg' %}
-            <li><a href="{% url 'blog:content' article.article_id %}">{{ article.title }}</a></li>
-            {% else %}
-            <li>
-                <h4>{{article.title}}</h4>
-                <p>{{article.content}}</p>
-            </li>
-            {% endif %}
-            {% endfor %}
-        </ul>
+    <!-- 文章列表 -->
+    {% if article_list %}
+    <ul>
+        <!-- 单个文章标题 -->
+        {% for article in article_list %}
+        {% if article.content_type == 'lg' %}
+        <li><a href="{% url 'blog:content' article.article_id %}">{{ article.title }}</a></li>
         {% else %}
-        <p>No articles are available.</p>
+        <li>
+            <h4>{{article.title}}</h4>
+            <p>{{article.content}}</p>
+        </li>
         {% endif %}
-    </center>
-</body>
-
-</html>
+        {% endfor %}
+    </ul>
+    {% else %}
+    <p>No articles are available.</p>
+    {% endif %}
+</center>
+{% endblock %}
