--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -55,7 +55,9 @@
     </main>
 
     <footer>
-        <p>&copy; {% now "Y" %} Edisoncgh Blog</p>
+        <center>
+            <p>&copy; {% now "Y" %} Edisoncgh Blog</p>
+        </center>
     </footer>
 </body>
 
