--- a/blog/templates/index_unlog.html
+++ b/blog/templates/index_unlog.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <center>
-    个人博客系统测试
+    <h1>个人博客系统测试</h1>
     <p>
         <a href="{% url 'blog:login' %}">转到登录</a>
     </p>
